--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -238,17 +238,17 @@
     "loginRequired": "Login Required",
     "loginToViewSettings": "Please login to view and edit settings.",
     "viewSettingsOperation": "view settings operation",
-    "freezeAccount": "Freeze Account",
-    "freezeAccountWarning": "Attention! This operation cannot be undone.",
-    "freezeAccountDescription": "Freezing your account means:",
+    "freezeAccount": "Deactivate Account",
+        "freezeAccountWarning": "This action will temporarily deactivate your account.",
+    "freezeAccountDescription": "Deactivating your account means:",
     "freezeAccountEffects": {
       "noAccess": "You will not be able to access your account",
       "cardsDisabled": "Your cards will be temporarily disabled",
       "supportRequired": "You will need to contact support team to reactivate",
       "autoLogout": "You will be automatically logged out with this operation"
     },
-    "freezeReason": "Freeze Reason",
-    "freezeReasonRequired": "You need to select a freeze reason",
+    "freezeReason": "Deactivation Reason",
+    "freezeReasonRequired": "You must select a deactivation reason",
     "freezeReasons": {
       "security_concern": "Security Concern",
       "lost_phone": "Lost Phone",
@@ -257,12 +257,12 @@
       "other": "Other"
     },
     "freezeDescription": "Additional Description (Optional)",
-    "freezeDescriptionPlaceholder": "Details about account freeze operation...",
-    "freezeConfirm": "Freeze Account",
-    "freezing": "Freezing...",
-    "freezeSuccess": "Your account has been successfully frozen. Logging out securely...",
-    "freezeError": "An error occurred during account freeze operation",
-    "alreadyFrozenError": "Your account is already frozen",
+    "freezeDescriptionPlaceholder": "Details about account deactivation...",
+    "freezeConfirm": "Deactivate Account",
+    "freezing": "Deactivating Account...",
+    "freezeSuccess": "Your account has been temporarily deactivated. Logging out securely...",
+    "freezeError": "An error occurred during account deactivation operation",
+    "alreadyFrozenError": "Your account is already deactivated",
     "unauthorizedError": "You don't have permission for this operation",
     "sessionExpiredError": "Your session is invalid. Please log in again",
     "unfreezeAccount": "Unfreeze Account",
