--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -238,17 +238,17 @@
     "loginRequired": "Giriş Yapmanız Gerekiyor",
     "loginToViewSettings": "Ayarları görüntülemek ve düzenlemek için lütfen giriş yapın.",
     "viewSettingsOperation": "Ayarları görüntüleme işlemini",
-    "freezeAccount": "Hesabı Dondur",
-    "freezeAccountWarning": "Dikkat! Bu işlem geri alınamaz.",
-    "freezeAccountDescription": "Hesabınızı dondurmak şu anlama gelir:",
+    "freezeAccount": "Hesabı Pasifleştir",
+    "freezeAccountWarning": "Bu işlem hesabınızı geçici olarak pasifleştirecektir.",
+    "freezeAccountDescription": "Hesabınızı pasifleştirmek şu anlama gelir:",
     "freezeAccountEffects": {
       "noAccess": "Hesabınıza erişim sağlayamazsınız",
       "cardsDisabled": "Kartlarınız geçici olarak devre dışı kalır",
       "supportRequired": "Yeniden açmak için destek ekibiyle iletişim kurmanız gerekir",
       "autoLogout": "Bu işlemle beraber güvenli çıkış yapılacaktır"
     },
-    "freezeReason": "Dondurma Sebebi",
-    "freezeReasonRequired": "Dondurma sebebi seçmeniz gerekiyor",
+    "freezeReason": "Pasifleştirme Sebebi",
+    "freezeReasonRequired": "Pasifleştirme sebebi seçmeniz gerekiyor",
     "freezeReasons": {
       "security_concern": "Güvenlik Endişesi",
       "lost_phone": "Telefon Kaybı", 
@@ -257,12 +257,12 @@
       "other": "Diğer"
     },
     "freezeDescription": "Ek Açıklama (İsteğe Bağlı)",
-    "freezeDescriptionPlaceholder": "Hesap dondurma işlemiyle ilgili detaylar...",
-    "freezeConfirm": "Hesabı Dondur",
-    "freezing": "Dondurma İşlemi...",
-    "freezeSuccess": "Hesabınız başarıyla donduruldu. Güvenli çıkış yapılıyor...",
-    "freezeError": "Hesap dondurma işlemi sırasında bir hata oluştu",
-    "alreadyFrozenError": "Hesabınız zaten dondurulmuş durumda",
+    "freezeDescriptionPlaceholder": "Hesap pasifleştirme işlemiyle ilgili detaylar...",
+    "freezeConfirm": "Hesabı Pasifleştir",
+    "freezing": "Pasifleştirme İşlemi...",
+    "freezeSuccess": "Hesabınız başarıyla geçici olarak pasifleştirildi. Güvenli çıkış yapılıyor...",
+    "freezeError": "Hesap pasifleştirme işlemi sırasında bir hata oluştu",
+    "alreadyFrozenError": "Hesabınız zaten pasifleştirilmiş durumda",
     "unauthorizedError": "Bu işlem için yetkiniz bulunmuyor",
     "sessionExpiredError": "Oturum bilginiz geçersiz. Lütfen tekrar giriş yapın",
     "unfreezeAccount": "Hesabı Aktifleştir",
