ingilizce dil sçeneği v1

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -207,21 +207,81 @@
     "topUpInfoMessage": "The balance you load will be instantly transferred to your card and can be used for all transportation services."
   },
   "routes": {
-    "search": "Search Route",
+    "title": "Routes",
+    "description": "Discover bus routes, plan your route",
+    "search": "Search routes...",
+    "searchPlaceholder": "Search routes...",
+    "allRoutes": "All Routes",
+    "favorites": "My Favorites",
+    "routePlanner": "Route Planner",
+    "searchResults": "Search Results",
     "from": "From",
     "to": "To",
+    "fromPlaceholder": "Starting stop or location",
+    "toPlaceholder": "Destination stop or location",
     "findRoute": "Find Route",
+    "getRouteSuggestion": "🗺️ Get Route Suggestion",
+    "searchingRoutes": "Searching routes...",
+    "suggestedRoutes": "Suggested Routes",
     "duration": "Duration",
     "distance": "Distance",
-    "price": "Price"
+    "price": "Price",
+    "transfersRequired": "transfers required",
+    "details": "Details",
+    "directions": "Directions",
+    "stationsInDirection": "Stations in Direction",
+    "location": "Location",
+    "arrival": "Arrival",
+    "addToFavorites": "❤️ Add to Favorites", 
+    "removeFromFavorites": "💔 Remove from Favorites",
+    "loadingRoutes": "Loading routes...",
+    "noFavorites": "No favorite routes yet",
+    "noFavoritesDescription": "You can easily access routes you like by adding them to your favorites",
+    "noRoutesFound": "No routes found",
+    "noRoutesFoundDescription": "Try different keywords for searching",
+    "noActiveRoutes": "No active routes available yet",
+    "noRouteFoundForPath": "No route found for this path",
+    "routeSuggestionError": "An error occurred while getting route suggestion",
+    "searchError": "An error occurred while searching",
+    "favoriteToggleError": "An error occurred while changing favorite status",
+    "routeDetailsError": "An error occurred while loading route details",
+    "stationsLoadError": "An error occurred while loading stations",
+    "enterStartAndEnd": "Please enter start and end points",
+    "unknown": "Unknown"
   },
   "stations": {
     "title": "Stations",
-    "search": "Search Station",
+    "description": "Discover nearby stations, manage your favorite stations",
+    "search": "Search stations... (e.g: Alaaddin, Meram, Konya)",
+    "searchPlaceholder": "Search stations...",
     "nearby": "Nearby Stations",
+    "favorites": "My Favorites",
+    "searchResults": "Search Results",
     "distance": "Distance",
     "available": "Available",
-    "occupied": "Occupied"
+    "occupied": "Occupied",
+    "details": "Details",
+    "directions": "Directions",
+    "getLocation": "Get My Location",
+    "gettingLocation": "Getting Location...",
+    "loadingStations": "Loading stations...",
+    "loadMore": "Load More",
+    "noFavorites": "No favorite stations yet",
+    "noFavoritesDescription": "You can easily access stations you like by adding them to your favorites",
+    "noStationsFound": "No stations found",
+    "noStationsFoundDescription": "Try different keywords for searching",
+    "noNearbyStations": "No stations found in this location. Check your location or search",
+    "stationType": "Station Type",
+    "address": "Address",
+    "routesPassingThrough": "Routes Passing Through",
+    "addToFavorites": "❤️ Add to Favorites",
+    "removeFromFavorites": "💔 Remove from Favorites",
+    "popularSearches": "Popular searches:",
+    "keyboardShortcuts": "↑↓ Navigate • Enter Select • Esc Close",
+    "locationPermissionError": "Location information could not be obtained",
+    "stationsLoadError": "An error occurred while loading stations",
+    "searchError": "An error occurred while searching",
+    "suggestionError": "An error occurred while getting suggestions"
   },
   "settings": {
     "title": "Settings",
@@ -283,7 +343,28 @@
     "unfreezeError": "An error occurred during account unfreeze operation",
     "alreadyActiveError": "Your account is already active",
     "userNotFoundError": "User not found",
-    "accountReactivated": "Your account is now active. You can use all services."
+    "accountReactivated": "Your account is now active. You can use all services.",
+    "notificationDeleted": "Notification successfully deleted",
+    "notificationDeleteError": "Notification could not be deleted",
+    "notificationDetailsError": "Notification details could not be retrieved",
+    "notificationsLoadError": "Notifications could not be loaded",
+    "confirmDeleteNotification": "Are you sure you want to delete this notification?",
+    "profileLoadError": "Profile information could not be retrieved",
+    "nameRequired": "Name and surname fields cannot be empty!",
+    "validEmailRequired": "Please enter a valid email address!",
+    "profileUpdateSuccess": "Your profile information has been successfully updated!",
+    "profileUpdateError": "An error occurred while updating profile!",
+    "cacheCleared": "Cache cleared!",
+    "darkThemeActivated": "Dark theme activated!",
+    "lightThemeActivated": "Light theme activated!",
+    "passwordRequired": "Password field cannot be empty",
+    "deleteReasonRequired": "Deletion reason must be specified",
+    "deleteReasonTooLong": "Deletion reason cannot exceed 500 characters",
+    "confirmDeletionRequired": "You must confirm the account deletion",
+    "accountDeleteSuccess": "Your account has been successfully deleted. Have a good day.",
+    "tokenRefreshSuccess": "Token successfully refreshed!",
+    "tokenRefreshError": "Token could not be refreshed",
+    "profilePhotoUpdateSuccess": "Profile photo successfully updated!"
   },
   "profile": {
     "title": "My Profile",
@@ -293,6 +374,27 @@
     "phone": "Phone",
     "updateProfile": "Update Profile",
     "changePassword": "Change Password"
+  },
+  "paymentPoints": {
+    "title": "Nearby Payment Points and Businesses",
+    "searchPlaceholder": "Business name or keyword...",
+    "search": "Search",
+    "loadingMap": "Loading Google Maps...",
+    "noResultsFound": "No results found",
+    "noResultsDescription": "Try a different search term or category.",
+    "rating": "Rating",
+    "openInGoogleMaps": "Open in Google Maps",
+    "locationNotAvailable": "Location not available",
+    "locationPermissionDenied": "Location permission denied",
+    "placeTypes": {
+      "paymentPoint": "Payment Point",
+      "supermarket": "Supermarket",
+      "convenienceStore": "Convenience Store",
+      "restaurant": "Restaurant",
+      "bank": "Bank",
+      "atm": "ATM",
+      "postOffice": "Post Office"
+    }
   },
   "dashboard": {
     "viewLikedNewsOperation": "view liked news operation",
