--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -207,21 +207,81 @@
     "topUpInfoMessage": "Yüklediğiniz bakiye anında kartınıza aktarılacak ve tüm ulaşım hizmetlerinde kullanabilirsiniz."
   },
   "routes": {
-    "search": "Rota Ara",
-    "from": "Nereden",
-    "to": "Nereye",
+    "title": "Rotalar",
+    "description": "Otobüs rotalarını keşfet, rota planla",
+    "search": "Rota ara...",
+    "searchPlaceholder": "Rota ara...",
+    "allRoutes": "Tüm Rotalar",
+    "favorites": "Favorilerim",
+    "routePlanner": "Rota Planlayıcı",
+    "searchResults": "Arama Sonuçları",
+    "from": "Nereden?",
+    "to": "Nereye?",
+    "fromPlaceholder": "Başlangıç durağı veya konumu",
+    "toPlaceholder": "Hedef durak veya konum",
     "findRoute": "Rota Bul",
+    "getRouteSuggestion": "🗺️ Rota Önerisi Al",
+    "searchingRoutes": "Rotalar aranıyor...",
+    "suggestedRoutes": "Önerilen Rotalar",
     "duration": "Süre",
     "distance": "Mesafe",
-    "price": "Fiyat"
+    "price": "Fiyat",
+    "transfersRequired": "aktarma gerekli",
+    "details": "Detaylar",
+    "directions": "Yönler",
+    "stationsInDirection": "Yönü Durakları",
+    "location": "Konum",
+    "arrival": "Varış",
+    "addToFavorites": "❤️ Favoriye Ekle",
+    "removeFromFavorites": "💔 Favoriden Çıkar",
+    "loadingRoutes": "Rotalar yükleniyor...",
+    "noFavorites": "Henüz favori rota yok",
+    "noFavoritesDescription": "Beğendiğin rotaları favorilere ekleyerek buradan kolayca erişebilirsin",
+    "noRoutesFound": "Rota bulunamadı",
+    "noRoutesFoundDescription": "Farklı anahtar kelimeler ile arama yapmayı dene",
+    "noActiveRoutes": "Henüz aktif rota bulunmuyor",
+    "noRouteFoundForPath": "Bu güzergah için rota bulunamadı",
+    "routeSuggestionError": "Rota önerisi alınırken bir hata oluştu",
+    "searchError": "Arama yapılırken bir hata oluştu",
+    "favoriteToggleError": "Favori durumu değiştirilirken bir hata oluştu",
+    "routeDetailsError": "Rota detayları yüklenirken bir hata oluştu",
+    "stationsLoadError": "Duraklar yüklenirken bir hata oluştu",
+    "enterStartAndEnd": "Başlangıç ve bitiş noktalarını girin",
+    "unknown": "Bilinmiyor"
   },
   "stations": {
-    "title": "İstasyonlar",
-    "search": "İstasyon Ara",
-    "nearby": "Yakındaki İstasyonlar",
+    "title": "Duraklar",
+    "description": "Yakınındaki durakları keşfet, favori duraklarını yönet",
+    "search": "Durak ara... (örn: Alaaddin, Meram, Konya)",
+    "searchPlaceholder": "Durak ara...",
+    "nearby": "Yakındaki Duraklar",
+    "favorites": "Favorilerim",
+    "searchResults": "Arama Sonuçları",
     "distance": "Mesafe",
     "available": "Müsait",
-    "occupied": "Dolu"
+    "occupied": "Dolu",
+    "details": "Detaylar",
+    "directions": "Yol Tarifi",
+    "getLocation": "📍 Konumumu Al",
+    "gettingLocation": "Konum Alınıyor...",
+    "loadingStations": "Duraklar yükleniyor...",
+    "loadMore": "Daha Fazla Yükle",
+    "noFavorites": "Henüz favori durak yok",
+    "noFavoritesDescription": "Beğendiğin durakları favorilere ekleyerek buradan kolayca erişebilirsin",
+    "noStationsFound": "Durak bulunamadı",
+    "noStationsFoundDescription": "Farklı anahtar kelimeler ile arama yapmayı dene",
+    "noNearbyStations": "Bu konumda durak bulunamadı. Konumunu kontrol et veya arama yap",
+    "stationType": "Durak Türü",
+    "address": "Adres",
+    "routesPassingThrough": "Geçen Rotalar",
+    "addToFavorites": "❤️ Favoriye Ekle",
+    "removeFromFavorites": "💔 Favoriden Çıkar",
+    "popularSearches": "Popüler aramalar:",
+    "keyboardShortcuts": "↑↓ Gezin • Enter Seç • Esc Kapat",
+    "locationPermissionError": "Konum bilgisi alınamadı",
+    "stationsLoadError": "Duraklar yüklenirken bir hata oluştu",
+    "searchError": "Arama yapılırken bir hata oluştu",
+    "suggestionError": "Öneri getirme hatası"
   },
   "settings": {
     "title": "Ayarlar",
@@ -283,7 +343,28 @@
     "unfreezeError": "Hesap aktifleştirme işlemi sırasında bir hata oluştu",
     "alreadyActiveError": "Hesabınız zaten aktif durumda",
     "userNotFoundError": "Kullanıcı bulunamadı",
-    "accountReactivated": "Hesabınız artık aktif. Tüm hizmetleri kullanabilirsiniz."
+    "accountReactivated": "Hesabınız artık aktif. Tüm hizmetleri kullanabilirsiniz.",
+    "notificationDeleted": "Bildirim başarıyla silindi",
+    "notificationDeleteError": "Bildirim silinemedi",
+    "notificationDetailsError": "Bildirim detayları alınamadı",
+    "notificationsLoadError": "Bildirimler yüklenemedi",
+    "confirmDeleteNotification": "Bu bildirimi silmek istediğinizden emin misiniz?",
+    "profileLoadError": "Profil bilgileri alınamadı",
+    "nameRequired": "Ad ve soyad alanları boş bırakılamaz!",
+    "validEmailRequired": "Geçerli bir e-posta adresi girin!",
+    "profileUpdateSuccess": "Profil bilgileriniz başarıyla güncellendi!",
+    "profileUpdateError": "Profil güncellenirken bir hata oluştu!",
+    "cacheCleared": "Önbellek temizlendi!",
+    "darkThemeActivated": "Koyu tema aktif edildi!",
+    "lightThemeActivated": "Açık tema aktif edildi!",
+    "passwordRequired": "Şifre alanı boş olamaz",
+    "deleteReasonRequired": "Silme nedeni belirtilmelidir",
+    "deleteReasonTooLong": "Silme nedeni 500 karakteri geçemez",
+    "confirmDeletionRequired": "Hesap silme işlemini onaylamalısınız",
+    "accountDeleteSuccess": "Hesabınız başarıyla silindi. İyi günler dileriz.",
+    "tokenRefreshSuccess": "Token başarıyla yenilendi!",
+    "tokenRefreshError": "Token yenilenemedi",
+    "profilePhotoUpdateSuccess": "Profil fotoğrafı başarıyla güncellendi!"
   },
   "profile": {
     "title": "Profilim",
@@ -293,6 +374,27 @@
     "phone": "Telefon",
     "updateProfile": "Profili Güncelle",
     "changePassword": "Şifre Değiştir"
+  },
+  "paymentPoints": {
+    "title": "Yakındaki Ödeme Noktaları ve İşletmeler",
+    "searchPlaceholder": "İşletme adı veya anahtar kelime...",
+    "search": "Ara",
+    "loadingMap": "Google Haritası yükleniyor...",
+    "noResultsFound": "Sonuç bulunamadı",
+    "noResultsDescription": "Farklı bir arama terimi veya kategori deneyin.",
+    "rating": "Puan",
+    "openInGoogleMaps": "Google Haritalar'da Aç",
+    "locationNotAvailable": "Konum mevcut değil",
+    "locationPermissionDenied": "Konum izni reddedildi",
+    "placeTypes": {
+      "paymentPoint": "Ödeme Noktası",
+      "supermarket": "Market",
+      "convenienceStore": "Bakkal",
+      "restaurant": "Restoran",
+      "bank": "Banka",
+      "atm": "ATM",
+      "postOffice": "Postane"
+    }
   },
   "dashboard": {
     "viewLikedNewsOperation": "Favori haberleri görüntüleme işlemini",
