--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -230,8 +230,12 @@
     "details": "Details",
     "directions": "Directions",
     "stationsInDirection": "Stations in Direction",
+    "stationsList": "Stations List",
     "location": "Location",
     "arrival": "Arrival",
+    "yourLocation": "Your Location",
+    "stationOrder": "Order",
+    "noStationsToDisplay": "No stations to display",
     "addToFavorites": "❤️ Add to Favorites", 
     "removeFromFavorites": "💔 Remove from Favorites",
     "loadingRoutes": "Loading routes...",
@@ -262,6 +266,7 @@
     "occupied": "Occupied",
     "details": "Details",
     "directions": "Directions",
+    "hideMap": "Hide Map",
     "getLocation": "Get My Location",
     "gettingLocation": "Getting Location...",
     "loadingStations": "Loading stations...",
