--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -230,8 +230,12 @@
     "details": "Detaylar",
     "directions": "Yönler",
     "stationsInDirection": "Yönü Durakları",
+    "stationsList": "Durak Listesi",
     "location": "Konum",
     "arrival": "Varış",
+    "yourLocation": "Konumunuz",
+    "stationOrder": "Sıra",
+    "noStationsToDisplay": "Gösterilecek durak yok",
     "addToFavorites": "❤️ Favoriye Ekle",
     "removeFromFavorites": "💔 Favoriden Çıkar",
     "loadingRoutes": "Rotalar yükleniyor...",
@@ -262,6 +266,7 @@
     "occupied": "Dolu",
     "details": "Detaylar",
     "directions": "Yol Tarifi",
+    "hideMap": "Haritayı Gizle",
     "getLocation": "📍 Konumumu Al",
     "gettingLocation": "Konum Alınıyor...",
     "loadingStations": "Duraklar yükleniyor...",
